# AOC-2022-Python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
AOC2022/: CliParser.py  __init__.py  __main__.py
AOC2022/Day01/: main.py  test.py
AOC2022/Day02/: main.py  test.py
AOC2022/Day03/: main.py  test.py
AOC2022/Day04/: main.py  test.py
AOC2022/Day05/: main.py  test.py
AOC2022/Day06/: main.py  test.py
AOC2022/Day07/: main.py  test.py
AOC2022/Day08/: main.py  test.py
AOC2022/Day09/: Vec2d.py  main.py  test.py
AOC2022/utils/: PuzzleSolution.py
src/: __init__.py  cli.py  run.py
src/Day01/: TestDay01.py  main.py
src/Day02/: TestDay02.py  main.py  test.py
src/Day03/: main.py  test.py
src/Day04/: main.py  test.py
src/Day05/: main.py  test.py
src/Day06/: main.py  test.py
