[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AOC-2022-Python"
version = "1.0.0"
authors = []
description = "Advent of Code 2022 in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "advent-of-code-data>=1.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.entry-points]
adventofcode.user = ["aoc = src:plugin"]

[project.scripts]
aocw = "src.cli:run_one"
